Fixed overlap on Directory Search results
When doing a search on a Directory page, the results were overlapping the pagination. This sets a min height for the description box - which is what pushes the results down.

--- a/includes/css/core/mp-core-directory.css
+++ b/includes/css/core/mp-core-directory.css
@@ -56,6 +56,9 @@
 .mp-core-directory .mp-directory-install-btn{
 	float:right;	
 }
+.mp-core-directory .mp-core-directory-tab-description{
+	min-height:19px;	
+}
 
 /*Pagination on Directory Pages */
 .mp-core-directory .tablenav{
